src/styles/_side-nav.scss
.fr-side-nav {
  position: relative;
  margin-top: 0;
  &__menu {
    display: block;
    height: 100vh;
    width: 240px;
    z-index: 3;
    position: fixed;
    top: 53px;
    left: 0;
    right: 0;
    bottom: 0;
    background: $white;
    resize: horizontal;
    overflow-x: scroll;
    box-shadow: 3px 3px 5px rgba(0,0,0,.26);

    &-toggle-btn {
      display: inline-block;
      margin: 0 12px;
      width: 12px;
      height: 12px;
      transform: rotate(90deg);
      transition: transform;
      transition-duration: 250ms;
      transition-timing-function: ease-out;
      &--open {
        transform: rotate(-90deg);
      }
    }

    &-list {
      list-style: none;
      margin: 0;
      padding: 0;
    }

    &-title {
      display: flex;
      justify-content: space-between;
      background: rgba(0,0,0,.3);
      padding: 3px 0 3px 7px;
      font-size: 14px;
      color: $white;
      text-transform: uppercase;
      &--collapsible {
        cursor: pointer;
      }

    }

    &-item {
      margin: 0;
      padding: 0;
      border-bottom: 1px solid $light-gray;
    }

    &-link {
      display: block;
      text-decoration: none;
      padding: 15px;
      font-size: 14px;
      color: rgba(0,0,0,.54);
      &:hover {
        background: rgba(0,0,0,.05);
        color: $blue;
      }
      &--active {
        background: rgba(0,0,0,.05);
        color: $blue;
        font-weight: bold;
      }
    }
  }

  &__backdrop {
    display: block;
    height: 100vh;
    width: 100vw;
    z-index: 2;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: rgba(0,0,0,.5);
  }
}

